handlebars partially working

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -362,7 +362,6 @@ span {
   font-family: 'Libre Baskerville', serif;
   margin: 20px 0 60px 20px;
   padding: 10px;
-  /* Create two columns that float next to eachother */
 }
 
 .content-two h2 {
@@ -503,12 +502,12 @@ span {
   padding: 3px;
 }
 
-.content-two .mainFooter {
+.mainFooter {
   margin-bottom: 40px;
   border-top: solid 0.5px #7777fd;
 }
 
-.content-two .mainFooter ul {
+.mainFooter ul {
   display: -ms-inline-grid;
   display: inline-grid;
   grid-auto-flow: row;
@@ -518,19 +517,19 @@ span {
   margin-top: 80px;
 }
 
-.content-two .mainFooter ul a {
+.mainFooter ul a {
   color: #110c0c;
   text-decoration: none;
   -webkit-box-shadow: inset 0 -1px 0 rgba(72, 24, 247, 0.4);
           box-shadow: inset 0 -1px 0 rgba(72, 24, 247, 0.4);
 }
 
-.content-two .mainFooter ul a:hover {
+.mainFooter ul a:hover {
   -webkit-box-shadow: inset 0 -1.2em 0 rgba(85, 8, 226, 0.4);
           box-shadow: inset 0 -1.2em 0 rgba(85, 8, 226, 0.4);
 }
 
-.content-two .mainFooter ul li:last-child {
+.mainFooter ul li:last-child {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
@@ -539,12 +538,12 @@ span {
   grid-row: 1 / 2;
 }
 
-.content-two .mainFooter ul li:hover ~ li p {
+.mainFooter ul li:hover ~ li p {
   -webkit-animation: wave-animation 0.3s infinite;
           animation: wave-animation 0.3s infinite;
 }
 
-.content-two .footerNav {
+.footerNav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -586,16 +585,16 @@ span {
 }
 
 @media screen and (min-width: 320px) {
-  .content-two .content-one {
+  .content-one {
     height: 60vh;
   }
-  .content-two .content-one .info h2 {
+  .content-one .info h2 {
     margin-top: 20px;
   }
 }
 
 @media screen and (min-width: 440px) {
-  .content-two .mainHeader .headNav .navList {
+  .mainHeader .headNav .navList {
     padding-top: 30px;
     padding-bottom: 30px;
     display: -webkit-box;
@@ -614,24 +613,24 @@ span {
     background-color: #9e9b9b opacity 0.5;
     margin-top: 200px;
   }
-  .content-two .mainHeader .headNav .navList .navitem {
+  .mainHeader .headNav .navList .navitem {
     font-size: 18px;
     margin: 30px 10px 30px 10px;
   }
-  .content-two .background {
+  .background {
     margin-left: 50px;
   }
-  .content-two .content-one .text1 {
+  .content-one .text1 {
     line-height: 24px;
   }
 }
 
 @media screen and (min-width: 660px) {
-  .content-two .background .loader {
+  .background .loader {
     margin-left: 60px;
     max-width: 20rem;
   }
-  .content-two .content-two .info2 {
+  .content-two .info2 {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -640,14 +639,14 @@ span {
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
   }
-  .content-two .content-two h2 {
+  .content-two h2 {
     text-align: center;
   }
-  .content-two .mainHeader .headNav {
+  .mainHeader .headNav {
     font-size: 36px;
     margin: 20px 0 20px 0;
   }
-  .content-two .mainHeader .headNav .navList {
+  .mainHeader .headNav .navList {
     padding-top: 30px;
     padding-bottom: 30px;
     display: -webkit-box;
@@ -666,61 +665,61 @@ span {
     background-color: #9e9b9b opacity 0.5;
     margin-top: 200px;
   }
-  .content-two .mainHeader .headNav .navList .navitem {
+  .mainHeader .headNav .navList .navitem {
     font-size: 36px;
     padding-top: 20px;
     margin: 30px 20px 30px 20px;
   }
-  .content-two .content-one .text1 {
+  .content-one .text1 {
     font-size: 20px;
   }
-  .content-two .content-one .info h2 {
+  .content-one .info h2 {
     font-size: 26px;
   }
-  .content-two .mainFooter ul {
+  .mainFooter ul {
     grid-auto-flow: column;
   }
 }
 
 @media screen and (min-width: 960px) {
-  .content-two .mainHeader .headNav .navList .navitem {
+  .mainHeader .headNav .navList .navitem {
     font-size: 44px;
     margin: 30px 40px 30px 40px;
   }
-  .content-two .background {
+  .background {
     margin-left: 100px;
   }
-  .content-two .background .loader {
+  .background .loader {
     max-width: 30rem;
   }
-  .content-two .content-one {
+  .content-one {
     margin-bottom: 60px;
   }
-  .content-two .content-one .info h2 {
+  .content-one .info h2 {
     font-size: 36px;
   }
-  .content-two .content-one .text1 {
+  .content-one .text1 {
     line-height: 36px;
     font-size: 24px;
   }
-  .content-two .content-two h2 {
+  .content-two h2 {
     font-size: 36px;
   }
-  .content-two .content-two h3 {
+  .content-two h3 {
     font-size: 32px;
   }
-  .content-two .container {
+  .container {
     margin-left: 20px;
   }
 }
 
-.content-two .port-one {
+.port-one {
   font-family: 'Libre Baskerville', serif;
   margin: 20px 20px 80px 20px;
   padding: 10px;
 }
 
-.content-two .port-one .box2 {
+.port-one .box2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -733,7 +732,7 @@ span {
           justify-content: space-evenly;
 }
 
-.content-two .port-one .box2 .deets1 {
+.port-one .box2 .deets1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -743,12 +742,12 @@ span {
   margin: 20px 0 20px 0;
 }
 
-.content-two .port-one .box2 .deets1 h2 {
+.port-one .box2 .deets1 h2 {
   margin: 20px 0 20px 0;
   text-align: center;
 }
 
-.content-two .port-one .box2 .deets1 .video {
+.port-one .box2 .deets1 .video {
   width: 100%;
   margin-bottom: 40px;
   -webkit-box-flex: 1;
@@ -757,7 +756,7 @@ span {
   padding-top: 10px;
 }
 
-.content-two .port-one .box2 .deets1 a {
+.port-one .box2 .deets1 a {
   margin-left: 40px;
   width: 100px;
   background: transparent;
@@ -771,18 +770,18 @@ span {
   text-transform: uppercase;
 }
 
-.content-two .port-one .box2 .deets1 a:hover {
+.port-one .box2 .deets1 a:hover {
   background: rgba(85, 2, 2, 0.03);
   cursor: pointer;
 }
 
-.content-two .port-one .box2 .deets1 a:active {
+.port-one .box2 .deets1 a:active {
   -webkit-box-shadow: none;
           box-shadow: none;
   top: 5px;
 }
 
-.content-two .port-one .box2 .deets2 {
+.port-one .box2 .deets2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -792,16 +791,16 @@ span {
   margin: 20px 0 60px 0;
 }
 
-.content-two .port-one .box2 .deets2 img {
+.port-one .box2 .deets2 img {
   width: 100%;
   margin: 20px 0 30px 0;
 }
 
-.content-two .port-one .box2 .deets2 h2 {
+.port-one .box2 .deets2 h2 {
   margin: 20px 0 20px 0;
 }
 
-.content-two .port-one .box2 .deets2 a {
+.port-one .box2 .deets2 a {
   text-align: center;
   margin-left: 40px;
   width: 100px;
@@ -816,18 +815,18 @@ span {
   text-transform: uppercase;
 }
 
-.content-two .port-one .box2 .deets2 a:hover {
+.port-one .box2 .deets2 a:hover {
   background: rgba(85, 2, 2, 0.03);
   cursor: pointer;
 }
 
-.content-two .port-one .box2 .deets2 a:active {
+.port-one .box2 .deets2 a:active {
   -webkit-box-shadow: none;
           box-shadow: none;
   top: 5px;
 }
 
-.content-two .port-one .box2 .deets3 {
+.port-one .box2 .deets3 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -837,17 +836,17 @@ span {
   margin: 20px 0 20px 0;
 }
 
-.content-two .port-one .box2 .deets3 img {
+.port-one .box2 .deets3 img {
   width: 100%;
   margin: 20px 0 30px 0;
 }
 
-.content-two .port-one .box2 .deets3 h2 {
+.port-one .box2 .deets3 h2 {
   text-align: center;
   margin: 20px 0 20px 0;
 }
 
-.content-two .port-one .box2 .deets3 a {
+.port-one .box2 .deets3 a {
   text-align: center;
   margin-left: 40px;
   width: 100px;
@@ -862,45 +861,45 @@ span {
   text-transform: uppercase;
 }
 
-.content-two .port-one .box2 .deets3 a:hover {
+.port-one .box2 .deets3 a:hover {
   background: rgba(85, 2, 2, 0.03);
   cursor: pointer;
 }
 
-.content-two .port-one .box2 .deets3 a:active {
+.port-one .box2 .deets3 a:active {
   -webkit-box-shadow: none;
           box-shadow: none;
   top: 5px;
 }
 
 @media screen and (min-width: 400px) {
-  .content-two .port-one .box2 .deets {
+  .port-one .box2 .deets {
     height: 60vh;
   }
 }
 
 @media screen and (min-width: 580px) {
-  .content-two .port-one .box2 h2 {
+  .port-one .box2 h2 {
     margin: 20px 0 10px 0;
     text-align: center;
   }
-  .content-two .port-one .box2 .deets {
+  .port-one .box2 .deets {
     height: 80vh;
   }
 }
 
 @media screen and (min-width: 660px) {
-  .content-two .port-one .box2 h2 {
+  .port-one .box2 h2 {
     margin: 20px 0 10px 0;
     text-align: center;
   }
-  .content-two .port-one .box2 .deets {
+  .port-one .box2 .deets {
     height: 80vh;
   }
 }
 
 @media screen and (min-width: 720px) {
-  .content-two .port-one .box2 {
+  .port-one .box2 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -911,28 +910,28 @@ span {
     -ms-flex-pack: distribute;
         justify-content: space-around;
   }
-  .content-two .port-one .box2 h2 {
+  .port-one .box2 h2 {
     margin: 20px 0 10px 0;
     text-align: center;
   }
-  .content-two .port-one .box2 .deets {
+  .port-one .box2 .deets {
     height: 80vh;
   }
 }
 
-.content-two .contact {
+.contact {
   font-family: 'Libre Baskerville', serif;
   padding: 15px;
   margin: 60px 0 20px 0;
 }
 
-.content-two .contact .heading h2 {
+.contact .heading h2 {
   text-align: center;
   font-size: 24px;
   margin-bottom: 20px;
 }
 
-.content-two .contact .heading p {
+.contact .heading p {
   text-align: center;
   padding: 5px;
   font-size: 18px;
@@ -940,7 +939,7 @@ span {
   line-height: 1.3;
 }
 
-.content-two input[type=text], .content-two select, .content-two textarea {
+input[type=text], select, textarea {
   width: 100%;
   -webkit-box-shadow: inset -3px -3px 10px #eee;
           box-shadow: inset -3px -3px 10px #eee;
@@ -954,7 +953,7 @@ span {
   resize: vertical;
 }
 
-.content-two input[type=submit] {
+input[type=submit] {
   background-color: #4c2ef7;
   color: white;
   padding: 12px 20px;
@@ -963,53 +962,52 @@ span {
   cursor: pointer;
 }
 
-.content-two input[type=submit]:hover {
+input[type=submit]:hover {
   background-color: #45a049;
 }
 
-.content-two .column {
+/* Create two columns that float next to eachother */
+.column {
   margin: 40px 0 40px 0;
   padding: 5px;
 }
 
-.content-two .column img {
+.column img {
   margin-top: 40px;
 }
 
-.content-two .column, .content-two input[type=submit] {
+.column, input[type=submit] {
   width: 100%;
   margin-top: 0;
 }
 
-.content-two input[type=submit] {
+input[type=submit] {
   width: 60%;
 }
 
 @media screen and (min-width: 420px) {
-  .content-two .heading h2 {
+  .heading h2 {
     font-size: 28px;
     font-weight: bold;
   }
-  .content-two .heading p {
+  .heading p {
     font-size: 22px;
   }
 }
 
 @media screen and (min-width: 520px) {
-  .content-two {
-    /* Create two columns that float next to eachother */
-    /* Clear floats after the columns */
-  }
-  .content-two .column {
+  /* Create two columns that float next to eachother */
+  .column {
     float: left;
     width: 50%;
     margin-top: 6px;
     padding: 20px;
   }
-  .content-two .column img {
+  .column img {
     margin-top: 40px;
   }
-  .content-two .row:after {
+  /* Clear floats after the columns */
+  .row:after {
     content: "";
     display: table;
     clear: both;
@@ -1017,10 +1015,10 @@ span {
 }
 
 @media screen and (min-width: 640px) {
-  .content-two input[type=submit] {
+  input[type=submit] {
     width: 60%;
   }
-  .content-two img {
+  img {
     margin-right: 20px;
   }
 }
