--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,42 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{!-- <h1>{{title}}</h1>
+<p>Welcome to {{title}}</p> --}}
+<div class="container">
+            <section class="background">
+                    <div class="box1 container">
+                        	<svg class="loader loader-two" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 340 340">
+                                <circle cx="170" cy="170" r="160" stroke="#E2007C"/>
+                                <circle cx="170" cy="170" r="135" stroke="#404041"/>
+                                <circle cx="170" cy="170" r="110" stroke="#E2007C"/>
+                                <circle cx="170" cy="170" r="85" stroke="#404041"/>
+                           </svg>
+                    </div>
+            </section>
+
+            <section class="content-one container">
+                <div class="info">
+                        <h2>Collins Ilo</h2>
+                        <p class="text1">Web Designer, Full Stack Developer, Motion and Graphic Designer.<p>
+                </div>
+                    <button class="button">
+                           <a href="#">Read More</a>
+                            <div class="button__horizontal"></div>
+                            <div class="button__vertical"></div>
+                        </button>
+            </section>
+
+            <section class="content-two container">
+                    <h2>Talk is CHEAP, show me the CODE</h2>
+                    <h3>Featured Project</h3>
+                <div class="info2">
+                    <div class="projects">
+                            <img src="images/bootcamp.jpg" alt="mobile display of bootcamp project">
+                    </div>
+                    <!-- <div class="projects"></div>
+                    <div class="projects"></div> -->
+                </div>
+                <button class="button">
+                        <a href="#">View More</a>
+                         <div class="button__horizontal"></div>
+                         <div class="button__vertical"></div>
+                </button>
+            </section>
