--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 .container {
-  margin: center;
+  margin: 0 auto;
   max-width: 1200px;
   margin-top: 20px;
 }
@@ -258,7 +258,7 @@ span {
   margin-bottom: 20px;
   margin-top: 45px;
   font-weight: bold;
-  color: #020a38;
+  color: #0727da;
 }
 
 .content-one .text1 {
@@ -358,31 +358,32 @@ span {
   text-decoration: none;
 }
 
+.talk {
+  font-size: 24px;
+  font-family: 'Libre Baskerville', serif;
+  margin-bottom: 20px;
+  padding: 5px;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  line-height: 36px;
+}
+
 .content-two {
   font-family: 'Libre Baskerville', serif;
-  margin: 20px 0 60px 20px;
+  margin: 80px 0 60px 20px;
   padding: 10px;
 }
 
-.content-two h2 {
-  letter-spacing: 0.5px;
-  line-height: 36px;
-  color: #020a38;
-}
-
-.content-two h2 {
-  font-size: 24px;
-  font-family: 'Libre Baskerville', serif;
-  margin-bottom: 30px;
-  padding: 5px;
-  font-weight: bold;
+.content-two .bottom {
+  margin-top: 40px;
 }
 
 .content-two h3 {
   text-align: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  color: #020a38;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  color: #0727da;
   font-size: 24px;
 }
 
@@ -408,7 +409,7 @@ span {
   margin: 0 auto;
   --offset: 10px;
   --border-size: 2px;
-  margin-top: 60px;
+  margin-top: 30px;
   display: block;
   position: relative;
   padding: 1.5em 3em;
@@ -431,7 +432,7 @@ span {
 }
 
 .content-two .button:hover {
-  background: rgba(100, 0, 0, 0.03);
+  background-color: rgba(8, 5, 5, 0.03);
 }
 
 .content-two .button__horizontal, .content-two .button__vertical {
@@ -498,12 +499,35 @@ span {
 }
 
 .content-two .projects img {
+  display: block;
   width: 100%;
   padding: 3px;
+  margin-bottom: 40px;
+}
+
+.content-two .projects h2 {
+  color: #0727da;
+  font-size: 24px;
+  font-family: 'Libre Baskerville', serif;
+  margin-bottom: 20px;
+  padding: 5px;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  line-height: 36px;
+}
+
+.content-two .projects p {
+  padding: 3px;
+  line-height: 18px;
+  text-align: center;
 }
 
 .mainFooter {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  padding: 4px;
+  background-color: slateblue;
+  border-radius: 5px;
   border-top: solid 0.5px #7777fd;
 }
 
@@ -525,8 +549,8 @@ span {
 }
 
 .mainFooter ul a:hover {
-  -webkit-box-shadow: inset 0 -1.2em 0 rgba(85, 8, 226, 0.4);
-          box-shadow: inset 0 -1.2em 0 rgba(85, 8, 226, 0.4);
+  -webkit-box-shadow: inset 0 -1.2em 0 rgba(242, 237, 253, 0.4);
+          box-shadow: inset 0 -1.2em 0 rgba(242, 237, 253, 0.4);
 }
 
 .mainFooter ul li:last-child {
@@ -593,6 +617,16 @@ span {
   }
 }
 
+@media screen and (min-width: 380px) {
+  .content-two .projects img {
+    height: 60vh;
+  }
+  .content-two .projects p {
+    line-height: 22px;
+    padding: 5px;
+  }
+}
+
 @media screen and (min-width: 440px) {
   .mainHeader .headNav .navList {
     padding-top: 30px;
@@ -615,19 +649,22 @@ span {
   }
   .mainHeader .headNav .navList .navitem {
     font-size: 18px;
-    margin: 30px 10px 30px 10px;
+    margin: 20px 10px 30px 10px;
   }
   .background {
-    margin-left: 50px;
+    margin-left: 80px;
   }
   .content-one .text1 {
     line-height: 24px;
+  }
+  .content-two .projects p {
+    text-align: center;
   }
 }
 
 @media screen and (min-width: 660px) {
   .background .loader {
-    margin-left: 60px;
+    margin-left: 120px;
     max-width: 20rem;
   }
   .content-two .info2 {
@@ -638,6 +675,22 @@ span {
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
+  }
+  .content-two .info2 .projects {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .content-two .info2 .projects img {
+    height: 40vh;
+    margin: 0 0 40px 0;
   }
   .content-two h2 {
     text-align: center;
@@ -702,6 +755,9 @@ span {
     line-height: 36px;
     font-size: 24px;
   }
+  .talk {
+    font-size: 36px;
+  }
   .content-two h2 {
     font-size: 36px;
   }
@@ -732,19 +788,30 @@ span {
           justify-content: space-evenly;
 }
 
+.port-one .box2 h2 {
+  color: #0727da;
+  font-weight: bold;
+}
+
 .port-one .box2 .deets1 {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   width: 100%;
-  height: 40vh;
+  text-align: center;
   padding: 3px;
-  margin: 20px 0 20px 0;
+  margin: 20px 0 60px 0;
 }
 
 .port-one .box2 .deets1 h2 {
   margin: 20px 0 20px 0;
   text-align: center;
+}
+
+.port-one .box2 .deets1 p {
+  text-align: center;
+  padding: 4px;
+  margin: 10px 0 20px 20px;
+  font-size: 18px;
+  font-style: italic;
+  line-height: 22px;
 }
 
 .port-one .box2 .deets1 .video {
@@ -757,7 +824,6 @@ span {
 }
 
 .port-one .box2 .deets1 a {
-  margin-left: 40px;
   width: 100px;
   background: transparent;
   color: #e55743;
@@ -782,13 +848,11 @@ span {
 }
 
 .port-one .box2 .deets2 {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  border-top: solid 1px #0727da;
+  text-align: center;
   width: 100%;
-  height: 40vh;
   padding: 3px;
-  margin: 20px 0 60px 0;
+  margin: 60px 0 60px 0;
 }
 
 .port-one .box2 .deets2 img {
@@ -797,12 +861,19 @@ span {
 }
 
 .port-one .box2 .deets2 h2 {
-  margin: 20px 0 20px 0;
+  margin: 40px 0 20px 0;
+}
+
+.port-one .box2 .deets2 p {
+  text-align: center;
+  margin: 10px 0 20px 0;
+  font-size: 18px;
+  font-style: italic;
+  line-height: 22px;
 }
 
 .port-one .box2 .deets2 a {
   text-align: center;
-  margin-left: 40px;
   width: 100px;
   background: transparent;
   color: #e55743;
@@ -827,13 +898,11 @@ span {
 }
 
 .port-one .box2 .deets3 {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  border-top: solid 1px #0727da;
+  text-align: center;
   width: 100%;
-  height: 40vh;
   padding: 3px;
-  margin: 20px 0 20px 0;
+  margin: 60px 0 20px 0;
 }
 
 .port-one .box2 .deets3 img {
@@ -843,12 +912,19 @@ span {
 
 .port-one .box2 .deets3 h2 {
   text-align: center;
-  margin: 20px 0 20px 0;
+  margin: 40px 0 20px 0;
+}
+
+.port-one .box2 .deets3 p {
+  text-align: center;
+  margin: 10px 0 20px 0;
+  font-size: 18px;
+  font-style: italic;
+  line-height: 22px;
 }
 
 .port-one .box2 .deets3 a {
   text-align: center;
-  margin-left: 40px;
   width: 100px;
   background: transparent;
   color: #e55743;
@@ -872,9 +948,16 @@ span {
   top: 5px;
 }
 
-@media screen and (min-width: 400px) {
-  .port-one .box2 .deets {
-    height: 60vh;
+@media screen and (min-width: 360px) {
+  .port-one .box2 h2 {
+    font-size: 22px;
+  }
+}
+
+@media screen and (min-width: 420px) {
+  p {
+    font-size: 24px;
+    line-height: 26px;
   }
 }
 
@@ -883,23 +966,22 @@ span {
     margin: 20px 0 10px 0;
     text-align: center;
   }
-  .port-one .box2 .deets {
-    height: 80vh;
+  .port-one .box2 .video {
+    display: none;
+  }
+  .port-one .box2 p {
+    font-size: 18px;
+    line-height: 24px;
   }
 }
 
 @media screen and (min-width: 660px) {
   .port-one .box2 h2 {
-    margin: 20px 0 10px 0;
+    margin: 40px 0 10px 0;
     text-align: center;
   }
-  .port-one .box2 .deets {
-    height: 80vh;
-  }
-}
-
-@media screen and (min-width: 720px) {
-  .port-one .box2 {
+  .port-one .box2 .media {
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -907,15 +989,40 @@ span {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    margin-top: 40px;
   }
-  .port-one .box2 h2 {
-    margin: 20px 0 10px 0;
-    text-align: center;
+  .port-one .box2 .media .p-text {
+    font-size: 18px;
+    line-height: 24px;
+    padding: 5px;
+    margin-top: 80px;
+    margin-left: 20px;
+    height: 200px;
   }
-  .port-one .box2 .deets {
-    height: 80vh;
+}
+
+@media screen and (min-width: 840px) {
+  .box2 .boxes {
+    margin: 60px 0 60px 0;
+    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .box2 .boxes .desk {
+    width: 200px;
+    height: 200px;
+    background-color: #0727da;
   }
 }
 
