--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,19 +24,28 @@
                         </button>
             </section>
 
-            <section class="content-two container">
-                    <h2>Talk is CHEAP, show me the CODE</h2>
-                    <h3>Featured Project</h3>
+                  <section class="content-two container">
+                    <h3>Featured Projects</h3>
                 <div class="info2">
                     <div class="projects">
-                            <img src="images/bootcamp.jpg" alt="mobile display of bootcamp project">
+                        <h2 class="hidden mashup">Wine Mashup</h2>
+                            <img src="images/mashup.svg" alt="mashup wine label">
+                            <img class="hidden desktop" src="images/organ_awareness.jpg" alt="organ awareness brochure">
+                            <img class="hidden tablet" src="images/infographic.jpg" alt="infographic Mockup">
+                            <p class="hidden mashup">The task was to create a beer or wine mashup for a random brand. Designing the logo, coming up with the concept of what the brand of beer or wine stands for...</p>
                     </div>
                     <!-- <div class="projects"></div>
                     <div class="projects"></div> -->
                 </div>
                 <button class="button">
-                        <a href="#">View More</a>
+                        <a href="portfolio.html">View More</a>
                          <div class="button__horizontal"></div>
                          <div class="button__vertical"></div>
                 </button>
+
+                <div class="bottom">
+                    <p class="text1 text2">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio error voluptates ratione ullam delectus? Alias ea culpa fuga ipsa tenetur est vero quis perferendis incidunt reiciendis! Officia possimus ullam doloremque.
+                    </p>
+                </div>
             </section>
