--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -426,6 +426,9 @@ span{
 }
 
    .projects {
+       display: flex;
+       flex-direction: column;
+       justify-content: space-evenly;
        margin-top: 10px;
        img {
            display: block;
