--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,2 +1,43 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{!-- <h1>{{title}}</h1>
+<p>Welcome to {{title}}</p> --}}
+<div class="container">
+
+            <header class="mainHeader">
+                    <img src="images/collins_logo.svg" alt="logo" class="logo">
+                    <div class="burger">
+                        <div class="bLine"></div>
+                        <div class="bLine line2"></div>
+                        <div class="bLine line3"></div>
+                    </div>
+                    <nav class="headNav">
+                        <ul class="navList">
+                            <li class="navitem"><a href="index.html">Home</a></li>
+                            <li class="navitem"><a href="#">About</a></li>
+                            <li class="navitem"><a href="portfolio.html">Portfolio</a></li>
+                            <li class="navitem"><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </header>
+
+                <section class="contact container">
+                        <div class="heading">
+                                <h2>Hello There!</h2>
+                                <p>Swing by for a cup of coffee, or leave a message:</p>
+                              </div>
+                              <div class="row">
+                                <div class="column">
+                                  <img class="hand" src="images/waving_hand.svg" alt="waving hand emoji">
+                                </div>
+                                <div class="column">
+                                  <form action="/action_page.php">
+                                    <label for="fname">First Name</label>
+                                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                                    <label for="lname">Email</label>
+                                    <input type="text" id="email" name="Email" placeholder="Your Email..">
+                                    <label for="subject">Subject</label>
+                                    <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+                                    <input type="submit" value="Submit">
+                                  </form>
+                                </div>
+                              </div>
+                </section>
