--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,10 +15,10 @@
                 </div>
                 <nav class="headNav">
                     <ul class="navList">
-                        <li class="navitem"><a href="index.html">Home</a></li>
+                        <li class="navitem"><a href="/">Home</a></li>
                         <li class="navitem"><a href="#">About</a></li>
-                        <li class="navitem"><a href="portfolio.html">Portfolio</a></li>
-                        <li class="navitem"><a href="contact.html">Contact</a></li>
+                        <li class="navitem"><a href="/portfolio">Portfolio</a></li>
+                        <li class="navitem"><a href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </header>
