working on database

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,11 +28,17 @@
                     <h3>Featured Projects</h3>
                 <div class="info2">
                     <div class="projects">
-                        <h2 class="hidden mashup">Wine Mashup</h2>
+                        <div class="mashup">
+                            <h2 class="hidden">Wine Mashup</h2>
                             <img src="images/mashup.svg" alt="mashup wine label">
+                            {{!-- <p class="hidden">The task was to create a beer or wine mashup for a random brand. Designing the logo, coming up with the concept of what the brand of beer or wine stands for...</p> --}}
+                        </div>
+                        <div class="organ">
                             <img class="hidden desktop" src="images/organ_awareness.jpg" alt="organ awareness brochure">
+                        </div>
+                        <div class="interactive">
                             <img class="hidden tablet" src="images/infographic.jpg" alt="infographic Mockup">
-                            <p class="hidden mashup">The task was to create a beer or wine mashup for a random brand. Designing the logo, coming up with the concept of what the brand of beer or wine stands for...</p>
+                        </div>  
                     </div>
                     <!-- <div class="projects"></div>
                     <div class="projects"></div> -->
