--- a/sass/main.scss
+++ b/sass/main.scss
@@ -727,26 +727,50 @@ span{
         flex-direction: column;
         justify-content: space-evenly;
 
+        a {
+            // margin-left: 40px;
+            width: 100px;
+            background: transparent;
+            color: #e55743;
+            box-shadow: 0 5px 0 rgb(247, 23, 23);
+            color: rgb(0, 0, 0);
+            padding: 5px;
+            position: relative;
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+        
+        a:hover {
+            background: rgba(85, 2, 2, 0.03);;
+            cursor: pointer;
+        }
+        
+        a:active {
+          box-shadow: none;
+          top: 5px;
+        }
+
         h2 {
             color: $textcolour;
             font-weight: bold;
         }
 
         .deets1 {
-            width: 100%;
+
+            max-width: 100%;
             text-align: center;
             // height: 40vh;
             padding: 3px;
             margin: 20px 0 60px 0;
 
-            h2 {
+            .Title {
                 margin: 20px 0 20px 0;
                 text-align: center;
                 // font-size: 18px;
                 // font-weight: bold;
             }
 
-            p {
+            .para {
                 text-align: center;
                 padding: 4px;
                 margin: 10px 0 20px 20px;
@@ -830,14 +854,15 @@ span{
 
             img {
                 width: 100%;
-                margin: 20px 0 30px 0;
+                margin: 20px 0 30px 30px;
             }
 
-            h2 {
+            .Title {
+
                 margin: 40px 0 20px 0;
             }
 
-            p {
+            .para {
                 text-align: center;
                 margin: 10px 0 20px 0;
                 font-size: 18px;
@@ -882,7 +907,7 @@ span{
 
         img {
             width: 100%;
-            margin: 20px 0 30px 0;
+            margin: 20px 0 30px 30px;
         }
 
 
